--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Testing Elements</title>
+		<title>Testing The Elements</title>
 		<link href='main.min.css' type='text/css' rel='stylesheet'>
 		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js'></script>
 		<script type='text/javascript' src='ctrl.js'></script>
