--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>some.css - examples</h1>
 		</header>
 		<div id='main'>
-			<input type='text' ng-model='btnClass' value='Test Out Button Classes'>
+			<input type='text' ng-model='btnClass' placeholder='Test Out Button Classes'>
 			<a class='{{ btnClass }}'>
 			Button</a>
 		</div>
