--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 			<h1>some.css - examples</h1>
 		</header>
 		<div id='main'>
+		<div id='btnDemo'>
 			<input type='text' ng-model='btnClass' placeholder='Test Out Button Classes'>
-			<a class='{{btnClass}}'>
-			Button</a>
+			<a class='{{btnClass}}'>Button</a>
+			<p>To activate: 
+				<code class='html'>
+					{{ btnHTML }}
+				</code>
+			</p>
+			<p>Colors: <code>grey(default) red, blue, green, yellow, orange, aqua, purple, dark</code>
+		</div>
 		</div>
 		<footer>
 			<p>&copy; 2013 Classify Studios. All Rights Reserved.</p>
