--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					{{ btnHTML }}
 				</code>
 			</p>
-			<p>Colors: <code>grey(default) red, blue, green, yellow, orange, aqua, purple, dark</code>
+			<p>Colors: <code>grey(default) red, blue, green, yellow, orange, aqua, purple, dark</code></p>
+			<p>Sizes: <code>big, small</code></p>
 		</div>
 		</div>
 		<footer>
