--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		</header>
 		<div id='main'>
 		<div id='btnDemo'>
+			<h2>Buttons</h2>
+			<hr>
 			<input type='text' ng-model='btnClass' placeholder='Test Out Button Classes'>
 			<a class='{{btnClass}}'>Button</a>
 			<p>To activate: 
