--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Testing The Elements</title>
+		<title>some.css - Documentation</title>
 		<link href='main.min.css' type='text/css' rel='stylesheet'>
 		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js'></script>
 		<script type='text/javascript' src='ctrl.js'></script>
@@ -14,7 +14,7 @@
 		<div id='btnDemo'>
 			<h2>Buttons</h2>
 			<hr>
-			<input type='text' ng-model='btnClass' placeholder='Test Out Button Classes'>
+			<input type='text' ng-model='btnClass' placeholder='Type classes here'>
 			<a class='{{btnClass}}'>Button</a>
 			<p>To activate: 
 				<code class='html'>
