--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>some.css - documentation</title>
-		<link href='main.min.css' type='text/css' rel='stylesheet'>
+		<link href='/main.min.css' type='text/css' rel='stylesheet'>
 		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js'></script>
 		<script type='text/javascript' src='ctrl.js'></script>
 	</head>
