Edited Homepage to add link to Readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</header>
 		<nav class='nav'>
 			<a href='/'>Home</a>
-			<a href='/about'>About</a>
+			<a href='https://github.com/krrishd/some-css/blob/master/README.md'>About</a>
 			<a href='http://github.com/krrishd/some-css'>Contribute</a>
 		</nav>
 		<div id='main'>
