--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav class='nav'>
 			<a href='/'>Home</a>
 			<a href='https://github.com/krrishd/some-css/blob/master/README.md'>About</a>
-			<a href='http://github.com/krrishd/some-css'>Contribute</a>
+			<a href='http://github.com/krrishd/some-css/fork'>Contribute</a>
 		</nav>
 		<div id='main'>
 		<div id='btnDemo'>
