--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>some.css - examples</h1>
 		</header>
 		<nav class='nav'>
-			<a href='/'>Home</a>
+			<a href='#'>Home</a>
 			<a href='https://github.com/krrishd/some-css/blob/master/README.md'>About</a>
 			<a href='http://github.com/krrishd/some-css/fork'>Contribute</a>
 		</nav>
