--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 		<p>Color Classes: <code>grey(default) red, blue, green, yellow, orange, aqua, purple, dark</code></p>
 		<input type='text' ng-model='lblClass' placeholder='Type Label Classes Here'> 
 			<div class='field'>
-				<label for ='formText' class='{{lblClass}}'>Text</label> <input id='formText' type='text'>
+				<label for ='formText' class='{{lblClass}}'>Text<input id='formText' type='text'></label>
 			</div>
 			<div class='field'>
-				<label class='{{lblClass}}' for='formPwd'>Password</label> <input type='password' id='formPwd'>
+				<label class='{{lblClass}}' for='formPwd'>Password<input type='password' id='formPwd'></label>
 			</div>
 			<div class='field'>
-				<label class='{{lblClass}}' for='formCheck'>Checkbox </label><input type='checkbox' id='formCheck'>
+				<label class='{{lblClass}}' for='formCheck'>Checkbox<input type='checkbox' id='formCheck'></label>
 			</div>
 			<div class='field'>
-				<label class='{{lblClass}}' for='formRadio'>Radio Button</label> <input id='formRadio' type='radio'>
+				<label class='{{lblClass}}' for='formRadio'>Radio Button<input id='formRadio' type='radio'></label>
 			</div>
 		</div>
 		</div>
